--- a/configuration.yml
+++ b/configuration.yml
@@ -9,6 +9,7 @@ serial:
     port: /dev/ttyUSB0
 # Enable the Zigbee2MQTT frontend
 frontend:
+    adapter: zboss
     port: 8080
 # Let Zigbee2MQTT generate a new network key on first start
 advanced:
