--- a/configuration.yml
+++ b/configuration.yml
@@ -1,5 +1,5 @@
 # Let new devices join our zigbee network
-permit_join: true
+permit_join: false
 # Docker Compose makes the MQTT-Server available using "mqtt" hostname
 mqtt:
     base_topic: zigbee2mqtt
